🐛 Fix UTF_8 Codeset references